--- a/bootstrap/css/styles.css
+++ b/bootstrap/css/styles.css
@@ -41,15 +41,15 @@ hr{
 .online{
     margin-left: 65px;
 }
-.icon-certificate{
+.icon-certificate, .icon-text{
     margin-left: 55px;
 }
 .menu{
     margin-left: 40px;
 }
 
-#btn-save-course,#btn-evaluation,#show-material,#select-themes,#btn-themes,#btn-continue,#btn-start,
-#btn-update-actualizacion,#btn-modules-course,#button-video,#btn-modal-files,#button-vide,.btn-update,.material-add,
+#btn-save-course,#btn-evaluation,#show-material,#select-themes,#btn-themes,#btn-continue,#btn-start,#btn-answer-correct,
+#btn-update-actualizacion,#btn-delete-theme,#btn-update-new-theme,#btn-modules-course,#button-video,#btn-modal-files,#button-vide,.btn-save-questions,.btn-update,.material-add,
 .save-module,.file-boton,#btn-registry,#all-courses,.list-group-item:hover{
     background-color: #70b52c;
 }
